# Reminisce

./: .gitignore  FIX_QUOTA_PROJECT.md  LICENSE  README.md  START_BACKEND.md
ai_service/: .gitignore  QUICK_SETUP.sh  README.md  TROUBLESHOOTING.md  __init__.py  brain.py  config.py  memory.py  pyproject.toml  requirements.txt  setup.py  test_connection.py
backend/: .env.example  FIX_CREDENTIALS.md  FIX_PORT.md  FIX_PROJECT_MISMATCH.md  FIX_TRANSCRIBE.md  QUICK_START.md  README.md  START_SERVER.md  requirements.txt  start.sh
backend/app/: config.py  main.py
backend/app/routes/: auth.py  chat.py  reminders.py  transcribe.py
backend/app/services/: firebase_service.py  memory_extraction_service.py  speech_service.py
frontend/: .cursorrules  API_SETUP.md  IMPLEMENTATION.md  README.md  VOICE_SETUP.md  index.html  package-lock.json
frontend/public/: happy.avif
frontend/src/: App.jsx  index.css
frontend/src/components/: AudioVisualizer.css  AudioVisualizer.jsx  AuthLayout.css  AuthLayout.jsx  AuthWrapper.jsx  Calendar.css  Calendar.jsx  Dashboard.css  Dashboard.jsx  ErrorBoundary.jsx  Login.css  Login.jsx  Register.jsx  TaskWidget.css  TaskWidget.jsx  VoiceChat.css  VoiceChat.jsx  VoiceSettings.css  VoiceSettings.jsx
frontend/src/contexts/: AuthContext.jsx  ThemeContext.jsx
frontend/src/hooks/: useMicrophone.js
frontend/src/services/: authService.js  elevenLabsService.js  firebaseConfig.js  speechToTextService.js
