[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_service"
version = "1.0.0"
description = "Reminisce AI Brain - Memory aid for seniors using Gemini and Pinecone"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pinecone>=6.0.0",
    "langchain-google-vertexai>=1.0.0",
    "google-cloud-aiplatform>=1.38.0",
    "vertexai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.setuptools.packages.find]
include = ["ai_service*"]

[tool.setuptools]
py-modules = ["brain", "memory", "config"]

